<resources>
    <string name="app_name">Buses</string>
    <string name="preference_file_key">com.example.buses.PREFERENCE_FILE_KEY</string>
    <string name="registro">Registro</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Nombre</string>
    <string name="password_hint">Contraseña</string>
    <string name="repeat_password_hint">Confirma contraseña</string>
    <string name="register_me">Registrarme</string>
    <string name="already_have_account">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="login">Login</string>
    <string name="dont_have_account">¿No tienes una cuenta? Registrate aquí</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Salir</string>
    <string name="add_bus_desc">Agregar un nuevo bus</string>
    <string name="icon_bus_desc">Icono bus</string>
    <string name="plate_hint">Placa</string>
    <string name="save">Guardar</string>
    <string name="from_location">Origen</string>
    <string name="destination">Destino</string>
    <string name="start_route">Iniciar recorrido</string>
    <string name="finish_route">Finalizar recorrido</string>
    <string name="loading">Cargando…</string>
    <string name="manual_scan">Ingreso manual</string>
</resources>