<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/selectFromLocationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/from_location"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <AutoCompleteTextView
            android:id="@+id/selectFromLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/from_location"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/selectDestinationLocationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/selectFromLocationLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/selectDestinationLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/destination"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnStartRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/start_route"
        app:layout_constraintTop_toBottomOf="@id/selectDestinationLocationLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>